Teach orb to gracefully handle failure downloading test-reporter
Prior to this change, a failure to download the test-reporter would
cause the whole build to fail, which is a rotten experience.

We should always be able to successfully download the test-reporter
binary. But we *never* want BuildPulse to make anyone's builds unstable.
So in the (hopefully rare) scenario where we're unable to download the
BuildPulse test-reporter, let's skip the BuildPulse analysis for the
build and emit a warning in the build logs.

Also, in the (again hopefully rare) scenario where we're unable to
download the binary from get.buildpulse.io, let's use github.com as a
backup source for the binary.

--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -126,9 +126,30 @@ commands:
               exit 1
             fi
 
-            set -x
+            getcli() {
+              urls=(
+                https://get.buildpulse.io/test-reporter-linux-amd64
+                https://github.com/buildpulse/test-reporter/releases/latest/download/test-reporter-linux-amd64
+              )
 
-            curl -fsSL --retry 3 --retry-connrefused --connect-timeout 5 https://get.buildpulse.io/test-reporter-linux-amd64 > ./buildpulse-test-reporter
+              for url in ${urls[@]}; do
+                (set -x; curl -fsSL --retry 3 --retry-connrefused --connect-timeout 5 $url)
+              done;
+            }
+
+            if getcli > ./buildpulse-test-reporter; then
+              : # Successfully fetched binary. Great!
+            else
+              echo ❌ Unable to send test results to BuildPulse. See details below.
+              echo
+              echo Downloading the BuildPulse test-reporter failed.
+              echo
+              echo We never want BuildPulse to make your builds unstable. Since we're having trouble downloading the BuildPulse test-reporter, we're skipping the BuildPulse analysis for this build.
+              echo
+              echo If you continue seeing this problem, please get in get in touch at https://buildpulse.io/contact so we can look into this issue.
+
+              exit 0
+            fi
 
             chmod +x ./buildpulse-test-reporter
 
